--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-pytest==8.1.1
-freezegun==1.4.0
 fastapi==0.110.0
-uvicorn==0.29.0
+freezegun==1.4.0
 httpx==0.27.0
+pytest==8.1.1
+pytest-cov==5.0.0
+uvicorn==0.29.0
